--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,68 @@
 *{
-    padding:7px;
+    padding:6px;
+}
+
+
+
+body
+    {background:linear-gradient(-90deg,rgb(233, 242, 250),rgb(183, 191, 240));
+    
+}
+
+h1{
+    color: rgb(36, 67, 147);
+    text-align: center;
+    
 }
 
 /* Change focus color to pink */
-.custom-input:focus {
-    border-color: pink;
+.form-control:focus {
+    border-color: rgb(117, 21, 37);
     box-shadow: 0 0 0 0.2rem rgba(255, 182, 193, 0.25); /* Light pink shadow */
 }
 
   /* Custom color for labels */
-.custom-input + label {
-    color: pink;
+label {
+    color: rgb(1, 49, 168);
+    font-size:larger;
+    align-items: center;
 }
+
+
 
   /* Customize the submit button */
 button {
-    background-color: pink;
-    border-color: pink;
+    background-color:rgba(236,42,39, 255);
+    border-color:rgba(236,42,39, 255);
+    margin-left: 560px;
+    width:12%;
+    color: azure;
+    
 }
 
-form button:hover {
-    background-color: #ff99cc;
-    border-color: #ff99cc;
+button:hover {
+    background-color: rgba(236,42,39, 255);
+    border-color:rgba(236,42,39, 255);
+    
 }
+
+.form-control{
+    border-color: rgb(36, 67, 147);
+    box-shadow: 0 0 0 0.2rem  rgb(36, 67, 147); /* Light pink shadow */
+    background-color:rgb(189, 203, 248)
+
+}
+
+nav
+    
+        {background:linear-gradient(-90deg,rgb(233, 242, 250),rgb(183, 191, 240));
+
+
+}
+
+
+
+
 
     
 
